--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
 <meta name="df74f594c0fe7dbcc850a1c04143e8d790c379ef" content="df74f594c0fe7dbcc850a1c04143e8d790c379ef" />
 
+
+<!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- End TrustBox script -->
+
+
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -207,7 +213,7 @@
 <div class="trustpilot-widget" data-locale="en-GB" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="64314c7326e69b18a5e17ccb" data-style-height="24px" data-style-width="100%" data-theme="light" data-min-review-count="10" data-style-alignment="center">
   <a href="https://uk.trustpilot.com/review/thelostdocs.com" target="_blank" rel="noopener">Trustpilot</a>
 </div>
-<!-- End TrustBox widget -->    
+<!-- End TrustBox widget -->
 
   <!-- Footer -->
 
@@ -231,8 +237,6 @@ function w3_close() {
 
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="thelostdocscom" data-description="Support me on Buy me a coffee!" data-message="Donations would be appreciated to keep this site running!" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
-<!--cash ads ad script
-<script data-cfasync="false" type="text/javascript" src="//geniusdexchange.com/a/display.php?r=6914234"></script>
--->
+
 </body>
 </html>
