--- a/randomsite.html
+++ b/randomsite.html
@@ -11,7 +11,7 @@
 
 <style>
     button {
-  padding: 1000px 2000px;
+  padding: 100vh 100vw;
   font-size: 16px;
   background-color: green;
   color: white;
@@ -30,6 +30,15 @@ document.getElementById("random-btn").addEventListener("click", function() {
     "https://thelostdocs.com/windows10update.html",
     "https://puginarug.com/",
     "https://sliding.toys/mystic-square/8-puzzle/",
+    "https://longdogechallenge.com/",
+    "https://mondrianandme.com/",
+    "https://neal.fun/perfect-circle/",
+    "https://neal.fun/rocks/",
+    "https://floatingqrcode.com/",
+    "https://cursoreffects.com/",
+    "https://smashthewalls.com/",
+    "",
+    "",
   ];
   
   // Generate a random number between 0 and the length of the websites array
