--- a/randomsite.html
+++ b/randomsite.html
@@ -11,13 +11,15 @@
 
 <style>
     button {
-  padding: 100vh 100vw;
+
   font-size: 16px;
   background-color: green;
   color: white;
   border-radius: 5px;
   cursor: pointer;
   display: block;
+  height: 100vh;
+  width: 100vw;
 }
 
 </style>
@@ -37,8 +39,46 @@ document.getElementById("random-btn").addEventListener("click", function() {
     "https://floatingqrcode.com/",
     "https://cursoreffects.com/",
     "https://smashthewalls.com/",
+    "https://maze.toys/mazes/mini/",
     "",
     "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+
   ];
   
   // Generate a random number between 0 and the length of the websites array
