--- a/randomsite.html
+++ b/randomsite.html
@@ -12,8 +12,8 @@
 <style>
     button {
 
-  font-size: 16px;
-  background-color: green;
+  font-size: 100px;
+  background-color: rgb(0, 0, 0);
   color: white;
   border-radius: 5px;
   cursor: pointer;
