--- a/randomsite.html
+++ b/randomsite.html
@@ -20,6 +20,7 @@
   display: block;
   height: 100vh;
   width: 100vw;
+  font-size: calc(5vw + 5vh);
 }
 
 </style>
@@ -40,8 +41,8 @@ document.getElementById("random-btn").addEventListener("click", function() {
     "https://cursoreffects.com/",
     "https://smashthewalls.com/",
     "https://maze.toys/mazes/mini/",
-    "",
-    "",
+    "https://jacksonpollock.org/",
+    "http://eelslap.com/",
     "",
     "",
     "",
