--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
   </div>
   <div class="w3-panel w3-large">
   </div>
+
+<!--start of prank-->
+
   <SCRIPT>
 
     /*
@@ -79,27 +82,28 @@
     var val=""
     var counter="0"
     themessage=new Array()
-    themessage[0]="George, you have an amazing body and a wonderful personality. Would you marry me?"
-    themessage[1]="Wow, George, I never realised what a freakin guru you were! Keep it up dude!"
-    themessage[2]="You're everything I have ever wanted in a man."
-    themessage[3]="I love your way with words, your pictures are fantastic, and you are modest, too, which is very rare in guys these days."
-    themessage[4]="Rumour has it that you are in fact a bit of a sex god. Can you confirm that?"
-    themessage[5]="Oh George, you are such a stud! Who would have thought a nice guy like yourself would be so well-hung?"
-    themessage[6]="I love you. You're the greatest...I want to have your baby."
-    themessage[7]="George, you are truly wonderful. I really have to meet you someday."
-    themessage[8]="You know, when I get to meet you in person the first thing I am going to do is give you all my money, seeing as you are so cool."
-    themessage[9]="Will you be my best man? I know you don't know me and stuff, but I would be honoured, I really would."
-    themessage[10]="Gosh, George, you get me so hot just looking at you...oh, I can't believe I just typed that!"
-    themessage[11]="You look really familiar...are you a supermodel or something?"
-    themessage[12]="Hey, George, I was wondering...if you're not doing anything tonight...um, would you wanna see a movie?"
-    themessage[13]="Do you sleep on your stomach, George? Can I?"
-    themessage[14]="I never thought I could love someone I didn't know...but you have proved me wrong."
-    themessage[15]="You're bad to the bone, b-b-b-b-bad, b-b-b-b-b-bad."
-    themessage[16]="You are seriously the nicest guy I have ever known. The way you make me feel is just out of this world."
-    themessage[17]="Was your father a terrorist, George? Because you da bomb."
-    themessage[18]="It's almost like you control my words, that's how much power you have over me..."
-    themessage[19]="I really dig you, George, I dig you with a big spade...I'll pay if that's what it takes."
-    
+    themessage[0]="Your website is truly captivating and has a wide range of interesting features that keep visitors engaged for hours on end."
+    themessage[1]="The moneyclicker game on your website is incredibly addictive and provides a fun way for users to pass the time."
+    themessage[2]="Your guess code game for a prize is cleverly designed and adds an element of excitement to the website experience."
+    themessage[3]="The Mandelbrot set visualization on your website is stunning and provides a mesmerizing display of mathematical beauty."
+    themessage[4]="Your website is a true testament to the power of creativity and innovation, and it's clear that a lot of thought and effort went into its design and development."
+    themessage[5]="The range of features and games on your website is impressive, and there's something for everyone to enjoy."
+    themessage[6]="The user interface on your website is user-friendly, making it easy for visitors to navigate and find what they're looking for."
+    themessage[7]="Your website is a great source of entertainment and education, providing visitors with a unique and engaging experience that they won't soon forget."
+    themessage[8]="Your website is a shining example of what can be achieved with creativity, passion, and dedication."
+    themessage[9]="What a lovely site! you know what? I will donate on BuyMeACoffee"
+    themessage[10]="The Lost Docs website is a true gem on the internet, and a testament to the boundless possibilities of the digital world."
+    themessage[11]="The emoji finder is so fun and addictive! It's amazing how many different emojis there are to discover."
+    themessage[12]="I love the music mixer on thelostdocs.com! It's such a creative way to make your own music and experiment with different sounds."
+    themessage[13]="Simon says is a classic game, and the version on thelostdocs.com is really well-done. It's a great way to test your memory and have some fun."
+    themessage[14]="I never thought I could find such a fun and engaging website...but I have been proven wrong!."
+    themessage[15]="The quiz on thelostdocs.com is really challenging, but also really rewarding. It covers a wide variety of topics, so there's always something new to learn."
+    themessage[16]="thelostdocs.com is a fantastic website with a lot of different games and activities to enjoy."
+    themessage[17]="The emoji finder is a lifesaver! It's so easy to use and has saved me so much time when I'm searching for that perfect colour emoji."
+    themessage[18]="I've always been fascinated by the Mandelbrot set and the interactive visualizations on this site are amazing! It's a great way to explore and learn more about fractals."
+    themessage[19]="Simon says...play the game on thelostdocs.com! This classic game is so addictive, and the colorful design makes it even more enjoyable."
+    themessage[20]="I can spend hours exploring the amazing features on thelostdocs.com. From the money clicker to the Mandelbrot set, there's always something new to discover."
+
     x=Math.floor(Math.random()*themessage.length)
     
     function changer(){
@@ -134,6 +138,9 @@
     <p align="center"><font face="arial" size="-2">This free script provided by</font><br>
     <font face="arial, helvetica" size="-2"><a href="http://javascriptkit.com">JavaScript
     Kit</a></font></p></textarea></p></p>
+
+<!--end of prank-->
+
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
