--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     themessage[6]="The user interface on your website is user-friendly, making it easy for visitors to navigate and find what they're looking for."
     themessage[7]="Your website is a great source of entertainment and education, providing visitors with a unique and engaging experience that they won't soon forget."
     themessage[8]="Your website is a shining example of what can be achieved with creativity, passion, and dedication."
-    themessage[9]="What a lovely site! you know what? I will donate on BuyMeACoffee"
+    themessage[9]="What a lovely site! you know what? I will donate on BuyMeACoffee!"
     themessage[10]="The Lost Docs website is a true gem on the internet, and a testament to the boundless possibilities of the digital world."
     themessage[11]="The emoji finder is so fun and addictive! It's amazing how many different emojis there are to discover."
     themessage[12]="I love the music mixer on thelostdocs.com! It's such a creative way to make your own music and experiment with different sounds."
@@ -129,15 +129,12 @@
     <TABLE height=182 cellSpacing=0 cellPadding=0 width=542 border=0>
       <TBODY>
       <TR>
-        <TD vAlign=top width=542 height=182><FONT face=Arial>
+        <TD vAlign=top width=300 height=100><FONT face=Arial>
           <FORM name=myform>
           <P><SMALL>Type in here:</SMALL></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=40></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
     </DIV>
-    
-    <p align="center"><font face="arial" size="-2">This free script provided by</font><br>
-    <font face="arial, helvetica" size="-2"><a href="http://javascriptkit.com">JavaScript
-    Kit</a></font></p></textarea></p></p>
+
 
 <!--end of prank-->
 
