--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <TR>
         <TD vAlign=top width=300 height=100><FONT face=Arial>
           <FORM name=myform>
-          <P><SMALL>Type in here:</SMALL></FONT></P>
+          <P><bold>Review here:</bold></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=40></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
     </DIV>
 
