--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     var currenthits=counterdate.getTime().toString()
     currenthits=parseInt(currenthits.substring(2,currenthits.length-4))+decrease_increase
     
-    document.write("You are visitor # <b>"+currenthits+"</b> to my site!")
+    document.write("<p style='text-align:right;'>You are visitor # <b>"+currenthits+"</b> to my site!")
     }
     fakecounter()
     </script>
