--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
     
     </SCRIPT>
-    
+    <center>
     &nbsp; <DIV align=left>
     <TABLE height=182 cellSpacing=0 cellPadding=0 width=100 border=0>
       <TBODY>
@@ -133,7 +133,7 @@
           <FORM name=myform>
           <P><bold>Review here:</bold></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=30></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
-    </DIV>
+    </DIV></center>
 
 
 <!--end of prank-->
