--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <a href="#"><img src="" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
   <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
   <div class="w3-container">
-    <h1><b>Fun Stuff!<span style="float: right;">
+    <h1><b>Fun Stuff!<span style="float: left;"></b></h1>
       <!--counter-->
       <script>
           /*
@@ -173,7 +173,7 @@
           }
           fakecounter()
       </script>
-  </span></b></h1>
+  </span>
     
 
 <!--end counter-->
