--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
     }
     
     </SCRIPT>
-    <centre>
-    &nbsp; <DIV align=left>
-    <TABLE height=182 cellSpacing=0 cellPadding=0 width=100 border=0>
+
+  <DIV align=left>
+   &nbsp; <TABLE height=182 cellSpacing=0 cellPadding=0 width=100 border=0>
       <TBODY>
       <TR>
         <TD vAlign=top width=50 height=100><FONT face=Arial>
           <FORM name=myform>
-          <P><bold>Review here:</bold></FONT></P>
+          &nbsp; <P><bold>Review here:</bold></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=30></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
-    </DIV></centre>
+    </DIV>
 
 
 <!--end of prank-->
