--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
     <a href="https://discord.com/channels/1060118955261448253/1060133308727558184" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Discord</a>
   </div>
   <div class="w3-panel w3-large">
-  </div>
-
-<!--start of prank-->
+    
+    <!--start of prank-->
 
   <SCRIPT>
 
@@ -126,18 +125,18 @@
     </SCRIPT>
 
   <DIV align=left>
-   &nbsp; <TABLE height=182 cellSpacing=0 cellPadding=0 width=100 border=0>
+   <TABLE height=182 cellSpacing=0 cellPadding=0 width=100 border=0>
       <TBODY>
       <TR>
         <TD vAlign=top width=50 height=100><FONT face=Arial>
           <FORM name=myform>
-          &nbsp; <P><bold>Review here:</bold></FONT></P>
-          &nbsp; <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=30></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
+          <P><bold>Review here:</bold></FONT></P>
+          <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=10 wrap=virtual cols=30></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
     </DIV>
-
 
 <!--end of prank-->
 
+  </div>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
