--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
   </div>
   <div class="w3-third w3-container">
-<a href="spendit.html"> <img src="https://m.economictimes.com/thumb/msid-92050962,width-1599,height-1080,resizemode-4,imgsize-305360/cryptocurrency.jpg" alt="Spend Satoshi's Bitcoin!"class="w3-hover-opacity" style="width:100%" </a>
+<a href="spendit.html"> <img src="https://www.reuters.com/resizer/oDm-L41HnUqJBrJ6lu6sEVJoer0=/960x503/smart/filters:quality(80)/cloudfront-us-east-2.images.arcpublishing.com/reuters/3OWNLW6LWZNSTDS5EXYU35CN7A.jpg" alt="Spend Satoshi's Bitcoin!"class="w3-hover-opacity" style="width:100%" </a>
     <div class="w3-container w3-white">
       <p><b>Spend Satoshi's Bitcoin!</b></p>
       <p>If his bitcoin was cashed out, then he would have £50000000. You need to spend it!</p>
