--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@
           <P><bold>Review here:</bold></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=8 wrap=virtual cols=25></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
     </DIV>
+<style>
 
+.button {
+  color:black;
+  padding:2px;
+  text-decoration-color:white;
+
+}
+
+</style>
 <!--end of prank-->
 
   </div>
