--- a/index.html
+++ b/index.html
@@ -133,16 +133,7 @@
           <P><bold>Review here:</bold></FONT></P>
           <P><FONT face=Arial><TEXTAREA onkeypress="return changer()" name=mytext rows=8 wrap=virtual cols=25></TEXTAREA><BR><BR><INPUT onclick=resetit() type=button value="Submit Feedback"></FONT></P></FORM></TD></TR></TBODY></TABLE>
     </DIV>
-<style>
 
-.button {
-  color:black;
-  padding:2px;
-  text-decoration-color:white;
-
-}
-
-</style>
 <!--end of prank-->
 
   </div>
@@ -159,9 +150,9 @@
   <a href="#"><img src="" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
   <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
   <div class="w3-container">
-      <div class="w3-section w3-bottombar w3-padding-16"></div>
-<h1><b>Fun Stuff!</b></h1>
+    <h1><b>Fun Stuff!</b></h1>
 
+  <div class="w3-section w3-bottombar w3-padding-16">
   </div>
   </div>
 </header>
