--- a/password/gatekeep.html
+++ b/password/gatekeep.html
@@ -37,7 +37,7 @@
     &nbsp;&nbsp;
     
     <TD WIDTH=50% ALIGN=CENTER VALIGN=MIDDLE>
-    <FONT FACE="ARIAL" SIZE=2><B>Hold on there buddy. You'll need a password to get in here. We're tryin' to keep out the riff-raff.</B></FONT><BR>
+    <FONT FACE="ARIAL" SIZE=2><B>Please enter your password to access secure webmaster login.</B></FONT><BR>
     &nbsp;
     
     <TR>
