--- a/password/area.html
+++ b/password/area.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <body>
     <p>test</p>
+
+<script>
+
+// replace the current URL in the history with a new URL
+history.replaceState(null, null, 'mail.google.com');
+
+
+</script>
+</body>
 </html>
