--- a/password/area.html
+++ b/password/area.html
@@ -6,7 +6,7 @@
 <script>
 
 // replace the current URL in the history with a new URL
-history.replaceState(null, null, 'mail.google.com');
+history.replaceState('mail.google.com');
 
 
 </script>
