--- a/password/area.html
+++ b/password/area.html
@@ -3,7 +3,7 @@
     <body>
     <p>test</p>
 
-<h4>The Army of School Haters<strong>(ASH)</strong> are a army fighting for justice in schools. This army is undercover, and fight in a guerilla type way.</h4>
+<h4>The Army of School Haters<i>(ASH)</i> are a army fighting for justice in schools. This army is undercover, and fight in a guerilla type way.</h4>
 
 <script>
 
