--- a/index.html
+++ b/index.html
@@ -247,17 +247,17 @@
       </div>
     </div>
     </div>
-    <!-- DONT FORGET TO REMOVE DIV OR ADD DIV WHEN DOING NEXT
+
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
-        <a href="quiz.html"> <img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/google-quiz.jpg?width=595&height=400&name=google-quiz.jpg" alt="Quiz" class="w3-hover-opacity" style="width:100%" </a>
+        <a href="randomsite.html"> <img src="https://i.ytimg.com/vi/cOCvghiHvFo/maxresdefault.jpg" alt="Randomize" class="w3-hover-opacity" style="width:100%" </a>
         <div class="w3-container w3-white">
 
-          <a href="quiz.html" <p></p><b>Multiple Choice Quiz</b></p><a>
-          <p>Fun quiz with score counter.</p>
+          <a href="randomsite.html" <p></p><b>More fun sites!</b></p><a>
+          <p>Teleport to another fun site like this!</p>
         </div>
       </div>
-      </div>-->
+      </div>
 
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
