--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
 
     
-      <div class="w3-third w3-container w3-margin-bottom">
+      <div class="w3-third w3-container">
         <a href="randomsite.html"> <img src="https://i.ytimg.com/vi/cOCvghiHvFo/maxresdefault.jpg" alt="Randomize" class="w3-hover-opacity" style="width:100%" </a>
         <div class="w3-container w3-white">
 
