--- a/index.html
+++ b/index.html
@@ -246,19 +246,16 @@
         <p>Choose between two different extremes!</p>
       </div>
     </div>
-    </div>
 
-    
+
       <div class="w3-third w3-container">
-        <a href="randomsite.html"> <img src="https://i.ytimg.com/vi/cOCvghiHvFo/maxresdefault.jpg" alt="Randomize" class="w3-hover-opacity" style="width:100%" </a>
-        <div class="w3-container w3-white">
-
-          <a href="randomsite.html" <p></p><b>More fun sites!</b></p><a>
-          <p>Teleport to another fun site like this!</p>
-        </div>
-      </div>
-      </div>
-
+        <a href="randomsite.html"> <img src="https://i.ytimg.com/vi/cOCvghiHvFo/maxresdefault.jpg" alt="Random Site!" style="width:100%" class="w3-hover-opacity"> </a>
+            <div class="w3-container w3-white">
+        <a href="randomsite.html"> <p><b>More fun sites!</b></p>
+              <p>Teleport to another fun site like this!</p> </a>
+            </div>
+          </div>
+</div>
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
