--- a/spendit.html
+++ b/spendit.html
@@ -19,7 +19,7 @@
 
     <title>Spend Satoshi's Bitcoin</title>
     <link rel="stylesheet" href="spendit.css" />
-    <link rel="icon" href="./img/icon.png" />
+    <link rel="icon" href="https://thumbs.dreamstime.com/b/bitcoin-logo-isolated-white-png-also-available-no-background-bitcoin-logo-isolated-white-152018558.jpg" />
 
   </head>
   <body>
