--- a/music.html
+++ b/music.html
@@ -26,6 +26,13 @@
         </form> 
         
         <audio id="audio-player" controls></audio>
+            
+            <audio controls>
+  <source src="sounds/la-campanella-remix.wav" type="audio/mpeg">
+</audio>
+         <audio controls>
+  <source src="sounds/beethoven-epic-remix.wav" type="audio/mpeg">
+</audio>   
         </centre>
         <script>
           // Get the file input element
