--- a/music.html
+++ b/music.html
@@ -27,10 +27,10 @@
         
         <audio id="audio-player" controls></audio>
             
-            <audio controls class=center>
+            <audio controls align="center">
   <source src="sounds/la-campanella-remix.wav" type="audio/mpeg">
 </audio>
-         <audio controls class=centre>
+         <audio controls align="center">
   <source src="sounds/beethoven-epic-remix.wav" type="audio/mpeg">
 </audio>   
         </centre>
