--- a/music.html
+++ b/music.html
@@ -26,14 +26,15 @@
         </form> 
         
         <audio id="audio-player" controls></audio>
-            
-            <audio controls align="center">
+        </centre>  
+<centre>
+            <audio controls>
   <source src="sounds/la-campanella-remix.wav" type="audio/mpeg">
 </audio>
-         <audio controls align="center">
+         <audio controls>
   <source src="sounds/beethoven-epic-remix.wav" type="audio/mpeg">
 </audio>   
-        </centre>
+</centre>
         <script>
           // Get the file input element
           const fileInput = document.querySelector('#audio-upload');
