--- a/notif.html
+++ b/notif.html
@@ -49,7 +49,8 @@
       <button type="button" id="addMeetingTime">Add Meeting Time</button>
     </div>
     <div>
-      <button type="submit">Save Settings</button>
+      <button type="button" id="start">Start</button>
+      <button type="submit" id="save">Save Settings</button>
       <button type="button" id="cancel">Cancel</button>
     </div>
   </form>
@@ -223,6 +224,20 @@ function cancelSettings() {
   });
 }
 
+// Function to start the break reminder
+function startBreakReminder() {
+  requestNotificationPermission().then(function () {
+    let breakReminder = setInterval(function () {
+      if (!isMeetingTime()) {
+        showNotification();
+        setTimeout(hideNotification, 5000); // Hide notification after 5 seconds
+      }
+    }, breakInterval * 60 * 1000); // Convert minutes to milliseconds
+  }).catch(function (error) {
+    console.error(error);
+  });
+}
+
 // Initialize break interval and meeting times
 let breakInterval = 15; // Default interval value
 let meetingTimes = []; // Default meeting times
@@ -258,22 +273,11 @@ meetingTimes.forEach(function (meetingTime) {
   });
 });
 
-// Request notification permission and start break reminder
-requestNotificationPermission().then(function () {
-  let breakReminder = setInterval(function () {
-    if (!isMeetingTime()) {
-      showNotification();
-      setTimeout(hideNotification, 5000); // Hide notification after 5 seconds
-    }
-  }, breakInterval * 60 * 1000); // Convert minutes to milliseconds
-}).catch(function (error) {
-  console.error(error);
-});
-
 // Event listeners
 document.getElementById('addMeetingTime').addEventListener('click', addMeetingTime);
 document.getElementById('settingsForm').addEventListener('submit', saveSettings);
 document.getElementById('cancel').addEventListener('click', cancelSettings);
+document.getElementById('start').addEventListener('click', startBreakReminder);
 
     
   </script>
